Fixed device name typo.

--- a/device.html
+++ b/device.html
@@ -322,7 +322,7 @@
     const deviceDict = {
       "8E-51-F9-59-3F-8D": "UChicago Pi",
       "D8-3A-DD-41-AA-94": "Chi HiPoint",
-      "D8-3A-DD-4C-C4-9E": "Chi Verizon FWB",
+      "D8-3A-DD-4C-C4-9E": "Chi Verizon FWA",
       "D8-3A-DD-4C-C4-E9": "UChicago Pi (eth0 only)",
       "D8-3A-DD-4C-C5-19": "Prof. Ghosh's Chi Pi",
       "D8-3A-DD-4C-C5-B5": "Chi Google Fiber Webpass",
