Added T-Mobile FWA label.

--- a/index.html
+++ b/index.html
@@ -86,7 +86,8 @@
       "D8-3A-DD-4C-C5-19": "Prof. Ghosh's Chi Pi",
       "D8-3A-DD-4C-C5-B5": "Chi Google Fiber Webpass",
       "D8-3A-DD-4C-C5-CE": "Prof. Ghosh's SB Pi",
-      "DC-A6-32-1D-A4-E0": "Prof. Striegel's Pi"
+      "DC-A6-32-1D-A4-E0": "Prof. Striegel's Pi",
+      "D8-3A-DD-63-C6-76": "SB T-Mobile FWA"
     }
 
     function appendData(data) {
