--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.min.css">
   <style>
     .status-online::before,
+    .status-attn::before,
     .status-offline::before {
       display: inline-block;
       content: "";
@@ -22,6 +23,9 @@
     }
     .status-online::before {
       background-image: url("data:image/svg+xml,<svg width='16' height='16' viewBox='0 0 16 16' fill='%230F0' class='bi bi-circle-fill' xmlns='http://www.w3.org/2000/svg'><circle cx='8' cy='8' r='8'/></svg>");
+    }
+    .status-attn::before {
+      background-image: url("data:image/svg+xml,<svg width='16' height='16' viewBox='0 0 16 16' fill='%23FF0' class='bi bi-exclamation-circle-fill' xmlns='http://www.w3.org/2000/svg'><path d='M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0M8 4a.905.905 0 0 0-.9.995l.35 3.507a.552.552 0 0 0 1.1 0l.35-3.507A.905.905 0 0 0 8 4m.002 6a1 1 0 1 0 0 2 1 1 0 0 0 0-2'/></svg>");
     }
     .status-offline::before {
       background-image: url("data:image/svg+xml,<svg width='16' height='16' viewBox='0 0 16 16' fill='%23F00' class='bi bi-dash-circle-fill' xmlns='http://www.w3.org/2000/svg'><path d='M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0M4.5 7.5a.5.5 0 0 0 0 1h7a.5.5 0 0 0 0-1z'/></svg>");
@@ -50,6 +54,10 @@
           <th>MAC</th>
           <th>Status</th>
           <th>Last timestamp</th>
+          <th class="d-none d-lg-table-cell">Last Eth status</th>
+          <th class="d-none d-lg-table-cell">Last WLAN status</th>
+          <th class="d-table-cell d-lg-none">Eth</th>
+          <th class="d-table-cell d-lg-none">WLAN</th>
         </tr>
       </thead>
       <tbody id="device-list">
@@ -89,14 +97,20 @@
       "DC-A6-32-1D-A4-E0": "Prof. Striegel's Pi",
       "D8-3A-DD-63-C6-76": "SB T-Mobile FWA"
     }
+    const threshold_ms = 3720000 // 1h 2m
 
     function appendData(data) {
       let mainContainer = document.getElementById("device-list");
       for (let entry of data) {
+        let ethState = entry.last_timestamp - entry.last_test_eth;
+        let wlanState = entry.last_timestamp - entry.last_test_wlan;
+        console.log(entry, ethState, wlanState)
         let tr = document.createElement("tr");
         tr.innerHTML = `<td><a href="device.html#${entry.mac}">${entry.mac}${deviceDict[entry.mac] ? " <small class=\"text-muted\">(" + deviceDict[entry.mac] + ")</small>" : ""}</a></td>`
           + `<td>${entry.online ? "<span class=\"status-online\">Online</span>" : "<span class=\"status-offline\">Offline</span>"}</td>`
-          + `<td>${new Date(entry.last_timestamp)}</td>`;
+          + `<td>${new Date(entry.last_timestamp)}</td>`
+          + `<td><span class=\"${(isNaN(ethState) || !entry.online) ? "status-offline\">Disabled" : (ethState > threshold_ms) ? "status-attn\">Unknown" : "status-online\">Online"}</span></td>`
+          + `<td><span class=\"${(isNaN(wlanState) || !entry.online) ? "status-offline\">Disabled" : (wlanState > threshold_ms) ? "status-attn\">Unknown" : "status-online\">Online"}</span></td>`;
         mainContainer.appendChild(tr);
       }
     }
