--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <style>
     .status-online::before,
     .status-attn::before,
+    .status-disabled::before,
     .status-offline::before {
       display: inline-block;
       content: "";
@@ -26,6 +27,9 @@
     }
     .status-attn::before {
       background-image: url("data:image/svg+xml,<svg width='16' height='16' viewBox='0 0 16 16' fill='%23FF0' class='bi bi-exclamation-circle-fill' xmlns='http://www.w3.org/2000/svg'><path d='M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0M8 4a.905.905 0 0 0-.9.995l.35 3.507a.552.552 0 0 0 1.1 0l.35-3.507A.905.905 0 0 0 8 4m.002 6a1 1 0 1 0 0 2 1 1 0 0 0 0-2'/></svg>");
+    }
+    .status-disabled::before {
+      background-image: url("data:image/svg+xml,<svg width='16' height='16' viewBox='0 0 16 16' fill='%23F00' class='bi bi-circle-fill' xmlns='http://www.w3.org/2000/svg'><path d='M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0M5.354 4.646a.5.5 0 1 0-.708.708L7.293 8l-2.647 2.646a.5.5 0 0 0 .708.708L8 8.707l2.646 2.647a.5.5 0 0 0 .708-.708L8.707 8l2.647-2.646a.5.5 0 0 0-.708-.708L8 7.293z'/></svg>");
     }
     .status-offline::before {
       background-image: url("data:image/svg+xml,<svg width='16' height='16' viewBox='0 0 16 16' fill='%23F00' class='bi bi-dash-circle-fill' xmlns='http://www.w3.org/2000/svg'><path d='M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0M4.5 7.5a.5.5 0 0 0 0 1h7a.5.5 0 0 0 0-1z'/></svg>");
@@ -97,7 +101,7 @@
       "DC-A6-32-1D-A4-E0": "Prof. Striegel's Pi",
       "D8-3A-DD-63-C6-76": "SB T-Mobile FWA"
     }
-    const threshold_ms = 3720000 // 1h 2m
+    const threshold_ms = 5400000 // 90 mins
 
     function appendData(data) {
       let mainContainer = document.getElementById("device-list");
@@ -109,8 +113,8 @@
         tr.innerHTML = `<td><a href="device.html#${entry.mac}">${entry.mac}${deviceDict[entry.mac] ? " <small class=\"text-muted\">(" + deviceDict[entry.mac] + ")</small>" : ""}</a></td>`
           + `<td>${entry.online ? "<span class=\"status-online\">Online</span>" : "<span class=\"status-offline\">Offline</span>"}</td>`
           + `<td>${new Date(entry.last_timestamp)}</td>`
-          + `<td><span class=\"${(isNaN(ethState) || !entry.online) ? "status-offline\">Disabled" : (ethState > threshold_ms) ? "status-attn\">Unknown" : "status-online\">Online"}</span></td>`
-          + `<td><span class=\"${(isNaN(wlanState) || !entry.online) ? "status-offline\">Disabled" : (wlanState > threshold_ms) ? "status-attn\">Unknown" : "status-online\">Online"}</span></td>`;
+          + `<td><span class=\"${(!entry.online) ? "status-offline\">Offline" : (isNaN(ethState)) ? "status-disabled\">Disabled" : (ethState > threshold_ms) ? "status-attn\">Warning" : "status-online\">Online"}</span></td>`
+          + `<td><span class=\"${(!entry.online) ? "status-offline\">Offline" : (isNaN(wlanState)) ? "status-disabled\">Disabled" : (wlanState > threshold_ms) ? "status-attn\">Warning" : "status-online\">Online"}</span></td>`;
         mainContainer.appendChild(tr);
       }
     }
