--- a/index.html
+++ b/index.html
@@ -99,9 +99,10 @@
       "D8-3A-DD-4C-C5-B5": "Chi Google Fiber Webpass",
       "D8-3A-DD-4C-C5-CE": "Prof. Ghosh's SB Pi",
       "DC-A6-32-1D-A4-E0": "Prof. Striegel's Pi",
-      "D8-3A-DD-63-C6-76": "SB T-Mobile FWA"
+      "D8-3A-DD-63-C6-76": "SB T-Mobile FWA",
+      "D8-3A-DD-5C-E3-DB": "SB low speed",
     }
-    const threshold_ms = 5400000 // 90 mins
+    const threshold_ms = 86400000 // 24 hours
 
     function appendData(data) {
       let mainContainer = document.getElementById("device-list");
